Sun Apr 24 01:58:01 2011  NARUSE, Yui  <naruse@ruby-lang.org>

	* ext/date/date_core.c (leap_p): surpress warning: parentheses.

	* ext/date/date_core.c (date_s__parse_internal): remove unused
	  variable "str".

	* ext/date/date_parse.c (parse_ddd_cb): use RSTRING_LENINT.

	* ext/date/date_strftime.c (date_strftime_with_tmx): remove unused
	  variable.

Sun Apr 24 00:34:23 2011  Tadayoshi Funaba  <tadf@dotrb.org>

	* ext/date/date_parse.c: removed some unused macros.  use strchr()
	  instead of index().

Sat Apr 23 21:29:42 2011  Tadayoshi Funaba  <tadf@dotrb.org>

	* ext/date/date_core.c: replacement of implementation of
	  _parse.  [experimental]
	* ext/date/date_parse.c: new.
	* ext/date/lib/date/format.rb: removed ruby version of _parse.

Fri Apr 22 12:04:15 2011  NARUSE, Yui  <naruse@ruby-lang.org>

	* array.c (rb_ary_sort_bang): fix rdoc.
	  patched by burningTyger. https://github.com/ruby/ruby/pull/11

Fri Apr 22 11:49:49 2011  NARUSE, Yui  <naruse@ruby-lang.org>

	* lib/xmlrpc/create.rb (XMLRPC::Create#conv2value):
	  XML-RPC's int is 32bit int, and Fixnum also may be beyond 32bit.

	* lib/xmlrpc/create.rb (XMLRPC::Create#conv2value):
	  XML-RPC doesn't allow Infinity and NaN.
	  http://www.xmlrpc.com/spec

Fri Apr 22 04:16:14 2011  Aaron Patterson <aaron@tenderlovemaking.com>

	* ext/psych/parser.c (parse): strings from psych have proper taint
	  markings.

	* test/psych/test_tainted.rb: test for string taint

Thu Apr 21 01:30:02 2011  NARUSE, Yui  <naruse@ruby-lang.org>

	* random.c (rb_f_srand): fix rdoc: srand(0)'s 0 is a seed.
	  [ruby-core:35833] fixes #4590

Thu Apr 21 01:01:28 2011  Masaya Tarui  <tarui@ruby-lang.org>

	* win32/win32.c (CreateChild): maximum length of lpCommandLine is
	  32,768 characters, including the Unicode terminating null character.
	
Wed Apr 20 21:32:11 2011  Tadayoshi Funaba  <tadf@dotrb.org>

	* ext/date/date_strptime.c (date__strptime_internal): do not
	  overwrite local variables.
