@@ -11,13 +11,13 @@
 
 #include <math.h>
 
-#if VMDEBUG > 0
+#if (VMDEBUG > 0) || defined(__clang)
 #define DECL_SC_REG(type, r, reg) register type reg_##r
 
-#elif __GNUC__ && __x86_64__ && !__clang__
+#elif __GNUC__ && __x86_64__
 #define DECL_SC_REG(type, r, reg) register type reg_##r __asm__("r" reg)
 
-#elif __GNUC__ && __i386__ && !__clang__
+#elif __GNUC__ && __i386__
 #define DECL_SC_REG(type, r, reg) register type reg_##r __asm__("e" reg)
 
 #else
